# ChangeLog for sys-apps/memtest86+
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/ChangeLog,v 1.55 2009/11/22 16:49:54 spock Exp $

  22 Nov 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-4.00.ebuild:
  Make 'memtest' the actual binary file and 'memtest.bin' the symlink.

  22 Nov 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-4.00.ebuild:
  Fix the installation instructions, add a 'memtest' symlink to make memtest
  work with boot loaders from the syslinux family (bug #290452).

  27 Sep 2009; Patrick Lauer <patrick@gentoo.org> memtest86+-4.00.ebuild:
  Installing kernel instead of elf binary. Fixes #286644

*memtest86+-4.00 (25 Sep 2009)

  25 Sep 2009; Robin H. Johnson <robbat2@gentoo.org>
  +files/memtest86+-4.00-hardcoded_cc.patch, +memtest86+-4.00.ebuild:
  Bug #286169: Version bump.

  12 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  memtest86+-2.11.ebuild:
  Avoid reporting pre-stripped file, non-system binary.

  05 May 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-2.11.ebuild:
  Fix bug #267592.

  26 Mar 2009; Michał Januszewski <spock@gentoo.org>
  +files/make-memtest86+-boot-floppy, +files/make-memtest86+-boot-floppy.1,
  metadata.xml, memtest86+-2.11.ebuild:
  Add a script to install memtest86+ on floppy disks (bug #252996).

  22 Mar 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-2.01.ebuild, memtest86+-2.10.ebuild, memtest86+-2.11.ebuild:
  Remove GRUB device ID translation code (bug #260547).

  09 Feb 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-2.01.ebuild, memtest86+-2.10.ebuild, memtest86+-2.11.ebuild:
  Fix GRUB device number translation code (bug #257767).

*memtest86+-2.11 (03 Jan 2009)

  03 Jan 2009; Michał Januszewski <spock@gentoo.org>
  +files/memtest86+-2.11-hardcoded_cc.patch, +memtest86+-2.11.ebuild:
  Version bump.

*memtest86+-2.10 (27 Nov 2008)
