@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/memtest86+-4.00.ebuild,v 1.5 2009/11/22 16:49:54 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/memtest86+-4.00.ebuild,v 1.6 2009/11/23 23:37:04 spock Exp $
 
 QA_PRESTRIPPED=/boot/memtest86plus/memtest
 
@@ -28,6 +28,7 @@ src_unpack() {
 	# Merged upstream
 	#epatch "${FILESDIR}"/${PN}-1.70-gnu_hash.patch
 
+	sed -i -e's/$(LD) -s /$(LD) /' Makefile
 	sed -i -e's,0x10000,0x100000,' memtest.lds
 
 	if use serial ; then
@@ -42,6 +43,7 @@ src_compile() {
 src_install() {
 	insinto /boot/memtest86plus
 	newins memtest.bin memtest || die
+	newins memtest memtest.netbsd || die
 	dosym memtest /boot/memtest86plus/memtest.bin
 	dodoc README README.build-process
 
@@ -56,12 +58,15 @@ pkg_postinst() {
 	einfo "memtest has been installed in /boot/memtest86plus/"
 	einfo "You may wish to update your bootloader configs"
 	einfo "by adding these lines:"
-
 	einfo " - For grub: (replace '?' with correct numbers for your boot partition)"
 	einfo "    > title=Memtest86Plus"
 	einfo "    > root (hd?,?)"
 	einfo "    > kernel /boot/memtest86plus/memtest"
-
+	einfo "   or try this if you get grub error 28:"
+	einfo "    > title=Memtest86Plus"
+	einfo "    > root (hd?,?)"
+	einfo "    > kernel --type=netbsd /boot/memtest86plus/memtest.netbsd"
+	einfo
 	einfo " - For lilo:"
 	einfo "    > image  = /boot/memtest86plus/memtest"
 	einfo "    > label  = Memtest86Plus"
